tests/baselines/reference/objectLiteralMemberWithModifiers2.errors.txt
tests/cases/compiler/objectLiteralMemberWithModifiers2.ts(1,11): error TS1184: Modifiers cannot appear here.


==== tests/cases/compiler/objectLiteralMemberWithModifiers2.ts (1 errors) ====
    var v = { public get foo() { } }
              ~~~~~~
!!! error TS1184: Modifiers cannot appear here.